// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary component with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling $
    6
  </h1>
</div>
`;

exports[`should render ExpenseSummary component with no expenses 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     totalling $
    0
  </h1>
</div>
`;

exports[`should render ExpenseSummary component with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling $
    4
  </h1>
</div>
`;
